@@ -62,6 +62,12 @@ Pin3D::~Pin3D()
 
 	SAFE_RELEASE(m_pd3dDevice);
 
+   SAFE_RELEASE(antiAliasTexture);
+
+   ballShadowTexture.FreeStuff();
+   ballTexture.FreeStuff();
+   lightTexture.FreeStuff();
+
 	if(backgroundVBuffer)
 		backgroundVBuffer->release();
 	if(tableVBuffer)
@@ -112,6 +118,61 @@ void Pin3D::CreateAndCopySpriteBuffers( AnimObject *animObj, ObjFrame *pof )
 	ddbltfx.dwSize = sizeof(DDBLTFX);
 	ddbltfx.dwFillColor = 0;
 	m_pddsBackBuffer->Blt(&pof->rc, NULL,&pof->rc, DDBLT_COLORFILL | DDBLT_WAIT, &ddbltfx);
+}
+
+void Pin3D::DrawSprite( DWORD x, DWORD y, RECT *prc, BaseTexture *texture )
+{
+   D3DTLVERTEX verts[4];
+   float z=1.0f;
+   float rhw=1.0f/(z*m_rzfar );
+   float width  = (float)(prc->right-prc->left);
+   float height = (float)(prc->bottom-prc->top);
+
+   DDSURFACEDESC2 ddsd;
+   ddsd.dwSize = sizeof(ddsd);
+   texture->GetSurfaceDesc( &ddsd );
+   float maxtu = (float)width / ddsd.dwWidth;
+   float maxtv = (float)height/ ddsd.dwHeight;
+
+   verts[0].sx = x;
+   verts[0].sy = y;
+   verts[0].sz = z;
+   verts[0].rhw = rhw;
+   verts[0].color=0xFFFFFFFF;
+   verts[0].tu = 0.0f;
+   verts[0].tv = 0.0f;
+
+   verts[1].sx = (x+width);
+   verts[1].sy = y;
+   verts[1].sz = z;
+   verts[1].rhw = rhw;
+   verts[1].color=0xFFFFFFFF;
+   verts[1].tu = maxtu;
+   verts[1].tv = 0.0f;
+
+   verts[2].sx = (x+width);
+   verts[2].sy = (y+height);
+   verts[2].sz = z;
+   verts[2].rhw = rhw;
+   verts[2].color=0xFFFFFFFF;
+   verts[2].tu = maxtu;
+   verts[2].tv = maxtv;
+
+   verts[3].sx = x;
+   verts[3].sy = (y+height);
+   verts[3].sz = z;
+   verts[3].rhw = rhw;
+   verts[3].color=0xFFFFFFFF;
+   verts[3].tu = 0.0f;
+   verts[3].tv = maxtv;
+   WORD idx[6]={0,1,2,2,3,0};
+   m_pd3dDevice->SetRenderState(RenderDevice::LIGHTING, FALSE);
+   m_pd3dDevice->SetRenderState(RenderDevice::ZENABLE, FALSE);
+   m_pd3dDevice->SetTexture(0, texture);
+   m_pd3dDevice->DrawIndexedPrimitive(D3DPT_TRIANGLELIST, D3DFVF_TLVERTEX, verts, 4,idx, 6, 0);
+   m_pd3dDevice->SetRenderState(RenderDevice::LIGHTING, TRUE);
+   m_pd3dDevice->SetRenderState(RenderDevice::ZENABLE, TRUE);
+   m_pd3dDevice->SetTexture(0, NULL);
 }
 
 void Pin3D::ClipRectToVisibleArea(RECT * const prc) const
@@ -660,6 +721,40 @@ retry3:
 	// Update the count.
 	NumVideoBytes += ddsd.dwWidth * ddsd.dwHeight * (ddsd.ddpfPixelFormat.dwRGBBitCount/8);
 
+   int texwidth = 8; // Minimum size 8
+   while(texwidth < m_dwRenderWidth)
+      texwidth <<= 1;
+
+   int texheight = 8;
+   while(texheight < m_dwRenderHeight)
+      texheight <<= 1;
+
+   // D3D7 does not support textures greater than 4096 in either dimension
+   if (texwidth > MAX_TEXTURE_SIZE)
+   {
+      texwidth = MAX_TEXTURE_SIZE;
+   }
+
+   if (texheight > MAX_TEXTURE_SIZE)
+   {
+      texheight = MAX_TEXTURE_SIZE;
+   }
+   // Define a backbuffer.
+   ddsd.dwFlags        = DDSD_WIDTH | DDSD_HEIGHT | DDSD_CAPS;
+   ddsd.dwWidth        = texwidth;
+   ddsd.dwHeight       = texheight;
+   ddsd.ddsCaps.dwCaps = DDSCAPS_TEXTURE | DDSCAPS_3DDEVICE;
+
+   if( FAILED( hr = m_pDD->CreateSurface( &ddsd, (LPDIRECTDRAWSURFACE7*)&antiAliasTexture, NULL ) ) )
+   {
+      if((ddsd.ddsCaps.dwCaps & DDSCAPS_NONLOCALVIDMEM) == 0) {
+         ddsd.ddsCaps.dwCaps |= DDSCAPS_NONLOCALVIDMEM;
+         goto retry3;
+      }
+      ShowError("Could not create static buffer.");
+      return hr;
+   }
+
 	// Create the D3D device.  This device will pre-render everything once...
 	// Then it will render only the ball and its shadow in real time.
 	hr = Create3DDevice((GUID*) pDeviceGUID);
@@ -834,12 +929,18 @@ retry7:
 		return hr; 
 	}
 
-	// Attach the "static" z buffer to the "static" buffer.
-	if( FAILED( hr = m_pddsStatic->AddAttachedSurface( m_pddsStaticZ ) ) )
-	{
-		ShowError("Could not attach static Z-Buffer.");
-		return hr; 
-	}
+   // Attach the "static" z buffer to the "static" buffer.
+   if( FAILED( hr = m_pddsStatic->AddAttachedSurface( m_pddsStaticZ ) ) )
+   {
+      ShowError("Could not attach static Z-Buffer.");
+      return hr; 
+   }
+   // Attach the "static" z buffer to the "static" buffer.
+   if( FAILED( hr = antiAliasTexture->AddAttachedSurface( m_pddsZBuffer ) ) )
+   {
+      ShowError("Could not attach static Z-Buffer.");
+      return hr; 
+   }
 
 	return S_OK;
 }
