@@ -529,12 +529,14 @@
 #define IDC_GLOBAL_REFLECTION_CHECK     394
 #define IDC_ENABLE_OFF_LIGHTING         394
 #define IDC_ENABLE_RAMP_LIGHTING        394
+#define IDC_ENABLE_AA                   394
 #define IDC_CHECK3                      396
 #define IDC_PRIM_ENV_MAP                396
 #define IDC_EDIT2                       397
 #define IDC_CHECK2                      398
 #define IDC_STATIC_RENDERING_CHECK      398
 #define IDC_ON_LIGHT_LIGHTMAP           398
+#define IDC_AA_ALL_TABLES               398
 #define IDC_JOYMECHTILTCOMBO            399
 #define IDC_ADDCREDITBUTTON2            400
 #define IDC_ADDCREDIT2                  401
